--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,8 +47,18 @@ services:
       - proxy
     labels:
       - traefik.enable=true
-      - traefik.http.routers.whoami.rule=Host(`whoami.lapre.com`)
+      - traefik.http.routers.whoami.rule=Host(`whoami.${DOMAINNAME}`)
       - traefik.http.routers.whoami.entrypoints=websecure
+
+  apache:
+    image: httpd:2.4.59-alpine
+    networks:
+      - proxy
+    labels:
+      # don't turn this on until there's something worth showing
+      # - traefik.enable=true
+      - traefik.http.routers.apache.rule=Host(`www.${DOMAINNAME}`)
+      - traefik.http.routers.apache.entrypoints=websecure
 
 networks:
   proxy:
